@@ -541,6 +541,9 @@ typedef DWORD FLONG;
 #define LANG_RUSSIAN	0x19
 #define LANG_CROATIAN	0x1a
 #define LANG_SERBIAN	0x1a
+#define LANG_SERBIAN_NEUTRAL 0x7c1a
+#define LANG_BOSNIAN	0x1a
+#define LANG_BOSNIAN_NEUTRAL 0x781a
 #define LANG_SLOVAK	0x1b
 #define LANG_ALBANIAN	0x1c
 #define LANG_SWEDISH	0x1d
