@@ -3103,12 +3103,14 @@ typedef struct tagSCROLLBARINFO {
 	int   reserved;
 	DWORD rgstate[CCHILDREN_SCROLLBAR+1];
 } SCROLLBARINFO,*PSCROLLBARINFO,*LPSCROLLBARINFO;
+#if (_WIN32_WINDOWS >= 0x0410)
 #define CCHILDREN_TITLEBAR 5
 typedef struct tagTITLEBARINFO {
 	DWORD cbSize;
 	RECT  rcTitleBar;
 	DWORD rgstate[CCHILDREN_TITLEBAR+1];
 } TITLEBARINFO,*PTITLEBARINFO,*LPTITLEBARINFO;
+#endif
 typedef struct tagWINDOWINFO {
 	DWORD cbSize;
 	RECT  rcWindow;
@@ -3713,7 +3715,9 @@ WINUSERAPI BOOL WINAPI GetMenuInfo(HMENU,LPMENUINFO);
 WINUSERAPI BOOL WINAPI GetProcessDefaultLayout(DWORD*);
 #endif
 WINUSERAPI BOOL WINAPI GetScrollBarInfo(HWND,LONG,PSCROLLBARINFO);
+#if (_WIN32_WINDOWS >= 0x0410)
 WINUSERAPI BOOL WINAPI GetTitleBarInfo(HWND,PTITLEBARINFO);
+#endif
 WINUSERAPI BOOL WINAPI GetWindowInfo(HWND,PWINDOWINFO);
 WINUSERAPI BOOL WINAPI GetMonitorInfoA(HMONITOR,LPMONITORINFO);
 WINUSERAPI BOOL WINAPI GetMonitorInfoW(HMONITOR,LPMONITORINFO);
